fixing up some buttons

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ button {
     padding: 50px;
     border-radius: 10px;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .signtext {
